Add angular frontend 2 part

--- a/testsystem-frontend/src/app/components/auth/register/register.component.html
+++ b/testsystem-frontend/src/app/components/auth/register/register.component.html
@@ -69,7 +69,7 @@
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>Номер цеха</mat-label>
+        <mat-label>Номер работы</mat-label>
         <input matInput type="number" min="1" formControlName="workNumber" placeholder="Заполните номер цеха">
         <mat-error *ngIf="form.controls['workNumber'].errors?.['required']">Заполнение обязательно!</mat-error>
       </mat-form-field>
