--- a/testsystem-frontend/src/app/components/user-results/user-results.component.html
+++ b/testsystem-frontend/src/app/components/user-results/user-results.component.html
@@ -1,1 +1,43 @@
-<p>user-results works!</p>
+<div class="results-container">
+  <mat-form-field class="filter-input">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Введите что нибудь..." #input>
+  </mat-form-field>
+
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 results-table">
+
+    <ng-container matColumnDef="testName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Название теста</th>
+      <td mat-cell *matCellDef="let result"> {{result.test.testName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Номер попытки</th>
+      <td mat-cell *matCellDef="let result"> {{result.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="score">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Балл</th>
+      <td mat-cell *matCellDef="let result"> {{result.score}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="assessmentName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Итог</th>
+      <td mat-cell *matCellDef="let result"> {{result.assessment?.assessmentName || 'Н/Д'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="acceptResult">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Принято</th>
+      <td mat-cell
+          *matCellDef="let result"> {{result.acceptResult != null ? (result.acceptResult ? 'Да' : 'Нет') : ''}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openResultDetails(row)"></tr>
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="8">Данные по запросу "{{input.value}}" не найдены</td>
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Выберите страницу"></mat-paginator>
+</div>
