--- a/testsystem-frontend/src/app/components/auth/login/login.component.css
+++ b/testsystem-frontend/src/app/components/auth/login/login.component.css
@@ -6,3 +6,12 @@ mat-card {
 mat-form-field {
   width: 100%;
 }
+
+.button-row {
+  display: table-cell;
+  max-width: 600px;
+}
+
+.button-row .mat-mdc-button-base {
+  margin: 8px 8px 8px 0;
+}
