--- a/testsystem-frontend/src/app/components/auth/register/register.component.html
+++ b/testsystem-frontend/src/app/components/auth/register/register.component.html
@@ -70,7 +70,7 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Номер работы</mat-label>
-        <input matInput type="number" min="1" formControlName="workNumber" placeholder="Заполните номер цеха">
+        <input matInput type="number" min="1" formControlName="workNumber" placeholder="Заполните номер работы">
         <mat-error *ngIf="form.controls['workNumber'].errors?.['required']">Заполнение обязательно!</mat-error>
       </mat-form-field>
 
