--- a/testsystem-frontend/src/app/components/user-results/user-results.component.html
+++ b/testsystem-frontend/src/app/components/user-results/user-results.component.html
@@ -11,7 +11,7 @@
     </ng-container>
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Номер попытки</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Номер тестирования</th>
       <td mat-cell *matCellDef="let result"> {{result.id}} </td>
     </ng-container>
 
